2007-03-31  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/igrid.py: Map the return key
	to enter() and shift-return to enterattr().

2007-03-30  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_psearch): add unicode support by
	encoding to ascii the input, since this routine also only deals
	with valid Python names.  Fixes a bug reported by Stefan.

2007-03-29  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (_inspect): convert unicode input into ascii
	before trying to evaluate it as a Python identifier.  This fixes a
	problem that the new unicode support had introduced when analyzing
	long definition lines for functions.

2007-03-24  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/igrid.py: Fix picking. Using
	igrid with wxPython 2.6 and -wthread should work now.
	igrid.display() simply tries to create a frame without
	an application. Only if this fails an application is created.

2007-03-23  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/path.py: Updated to version 2.2.

2007-03-23  Ville Vainio  <vivainio@gmail.com>

	* iplib.py: recursive alias expansion now works better, so that
	cases like 'top' -> 'd:/cygwin/top' -> 'ls :/cygwin/top'
	doesn't trip up the process, if 'd' has been aliased to 'ls'.
	
	* Extensions/ipy_gnuglobal.py added, provides %global magic
	for users of http://www.gnu.org/software/global
	
	* iplib.py: '!command /?' now doesn't invoke IPython's help system.
	Closes #52. Patch by Stefan van der Walt.

2007-03-23  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/FakeModule.py (FakeModule.__init__): Small fix to
	respect the __file__ attribute when using %run.  Thanks to a bug
	report by Sebastian Rooks <sebastian.rooks-AT-free.fr>.

2007-03-22  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (raw_input): Fix mishandling of unicode at
	input.  Patch sent by Stefan.
